--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
 	</head>
 	<body>
 		<div id="container">
-			 
+			<header>
+				<div id="logo"></div>
+				<h1>Maui Cleaning Company</h1>
+				 <nav>
+					<ul>
+						<li><a href="home">Home</a></li>
+				 </nav>
+			 </header>
 		</div>
 	</body>
 </html>
